# whoopsie

./: .env.local  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile  tailwind.config.js
.github/: .kodiak.toml  dependabot.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: ci.yaml
app/: Cargo.toml
app/src/: lib.rs  state.rs  tracing.rs
app/src/components/: mod.rs
app/src/components/monitor/: card.rs  list.rs  mod.rs
app/src/components/structural/: body_content.rs  header.rs  mod.rs  navbar.rs
app/src/components/util/: mod.rs
app/src/config/: mod.rs
app/src/pages/: home.rs  login.rs  not_found.rs
app/src/types/: mod.rs
app/src/types/models/: mod.rs  monitor.rs
app/src/types/traits/: db.rs
doc/art/: logo.xcf
entities/: Cargo.toml
entities/src/: lib.rs  monitor.rs  monitor_status.rs  prelude.rs  sea_orm_active_enums.rs
frontend/src/: lib.rs
hack/: docker-compose.yaml
hack/config/: 01-basic-config.yaml  02-local-app-config.yaml
macros/: Cargo.toml
macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: helpers.rs  lib.rs  m20220101_000001_create_monitor_table.rs
server/: Cargo.toml
server/src/: fileserv.rs  main.rs  signal.rs
server/src/config/: database_config.rs  mod.rs  monitor_config.rs
server/src/db/: mod.rs
server/src/db/seaorm_repositories/: errors.rs  mod.rs  monitor.rs
server/src/db/seaorm_repositories/mappings/: monitor.rs
server/src/extensions/: mod.rs
server/src/monitor/: discovery.rs  mod.rs  scheduler.rs
server/src/monitor/tasks/: endpoint.rs  mod.rs
style/: tailwind.css
